src/objects/CH_Workgroup_Schedule_Timeslot__c.object
<CustomObject>
    <fields>
        <fullName>CH_Day__c</fullName>
        <label>Day</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_End_Time__c</fullName>
        <label>End Time</label>
        <required>true</required>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>CH_Endtime_GMT__c</fullName>
        <formula>CH_End_Time__c - (( 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC&quot;,0,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -1&quot;,-1,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -2&quot;,-2,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -2:30&quot;,-2.5,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -3&quot;,-3,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -3:30&quot;,-3.5,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -4&quot;,-4,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -5&quot;,-5,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -6&quot;,-6,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -7&quot;,-7,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -8&quot;,-8,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -9&quot;,-9,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -9:30&quot;,-9.5,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -10&quot;,-10,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -11&quot;,-11,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -12&quot;,-12,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +0&quot;,0,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +1&quot;,1,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +2&quot;,2,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +3&quot;,3,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +3:30&quot;,3.5,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +4&quot;,4,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +4:30&quot;,4.5,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +5&quot;,5,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +5:30&quot;,5.5,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +5:45&quot;,5.75,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +6&quot;,6,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +6:30&quot;,6.5,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +7&quot;,7,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +8&quot;,8,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +8:30&quot;,8.5,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +8:45&quot;,8.75,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +9&quot;,9,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +9:30&quot;,9.5,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +10&quot;,10,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +11&quot;,11,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +12&quot;,12,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +12:45&quot;,12.75,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +13&quot;,13,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +13:45&quot;,13.75,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +14&quot;,14,0)) * 60 * 60 * 1000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Endtime GMT</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>CH_Old_Timeslot_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Old Timeslot ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Schedule_Name__c</fullName>
        <description>Used by Gridbuddy</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Schedule Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_SortOrder__c</fullName>
        <formula>IF(INCLUDES(CH_Day__c,&apos;Monday&apos;), &apos;1&apos;, 
 IF(INCLUDES(CH_Day__c,&apos;Tuesday&apos;), &apos;2&apos;, 
  IF(INCLUDES(CH_Day__c,&apos;Wednesday&apos;), &apos;3&apos;, 
   IF(INCLUDES(CH_Day__c,&apos;Thursday&apos;), &apos;4&apos;, 
    IF(INCLUDES(CH_Day__c,&apos;Friday&apos;), &apos;5&apos;, 
     IF(INCLUDES(CH_Day__c,&apos;Saturday&apos;), &apos;6&apos;, &apos;7&apos;)
    )
   )
  )
 )
) + TEXT(CH_Start_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SortOrder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Start_Time__c</fullName>
        <label>Start Time</label>
        <required>true</required>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>CH_Starttime_GMT__c</fullName>
        <formula>CH_Start_Time__c - ((
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC&quot;,0,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -1&quot;,-1,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -2&quot;,-2,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -2:30&quot;,-2.5,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -3&quot;,-3,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -3:30&quot;,-3.5,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -4&quot;,-4,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -5&quot;,-5,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -6&quot;,-6,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -7&quot;,-7,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -8&quot;,-8,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -9&quot;,-9,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -9:30&quot;,-9.5,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -10&quot;,-10,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -11&quot;,-11,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC -12&quot;,-12,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +0&quot;,0,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +1&quot;,1,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +2&quot;,2,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +3&quot;,3,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +3:30&quot;,3.5,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +4&quot;,4,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +4:30&quot;,4.5,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +5&quot;,5,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +5:30&quot;,5.5,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +5:45&quot;,5.75,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +6&quot;,6,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +6:30&quot;,6.5,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +7&quot;,7,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +8&quot;,8,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +8:30&quot;,8.5,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +8:45&quot;,8.75,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +9&quot;,9,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +9:30&quot;,9.5,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +10&quot;,10,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +11&quot;,11,0)+ 
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +12&quot;,12,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +12:45&quot;,12.75,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +13&quot;,13,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +13:45&quot;,13.75,0)+
if(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c) = &quot;UTC +14&quot;,14,0)) * 60 * 60 * 1000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Starttime GMT</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>CH_Time_Difference__c</fullName>
        <description>Time difference in seconds to GMT time</description>
        <formula>CASE(TEXT(CH_Workgroup_Schedule__r.CH_Time_Zone__c),&quot;UTC&quot;,0,&quot;UTC -1&quot;,-1,&quot;UTC -2&quot;,-2,&quot;UTC -2:30&quot;,-2.5,&quot;UTC -3&quot;,-3,&quot;UTC -3:30&quot;,-3.5,
					&quot;UTC -4&quot;,-4,&quot;UTC -5&quot;,-5,&quot;UTC -6&quot;,-6,&quot;UTC -7&quot;,-7,&quot;UTC -8&quot;,-8,&quot;UTC -9&quot;,-9,&quot;UTC -9:30&quot;,-9.5,&quot;UTC -10&quot;,-10,&quot;UTC -11&quot;,-11,
					&quot;UTC -12&quot;,-12,&quot;UTC +0&quot;,0,&quot;UTC +1&quot;,1,&quot;UTC +2&quot;,2,&quot;UTC +3&quot;,3,&quot;UTC +3:30&quot;,3.5,&quot;UTC +4&quot;,4,&quot;UTC +4:30&quot;,4.5,&quot;UTC +5&quot;,5,
					&quot;UTC +5:30&quot;,5.5,&quot;UTC +5:45&quot;,5.75,&quot;UTC +6&quot;,6,&quot;UTC +6:30&quot;,6.5,&quot;UTC +7&quot;,7,&quot;UTC +8&quot;,8,&quot;UTC +8:30&quot;,8.5,&quot;UTC +8:45&quot;,8.75,
					&quot;UTC +9&quot;,9,&quot;UTC +9:30&quot;,9.5,&quot;UTC +10&quot;,10,&quot;UTC +11&quot;,11,&quot;UTC +12&quot;,12,&quot;UTC +12:45&quot;,12.75,&quot;UTC +13&quot;,13,&quot;UTC +13:45&quot;,13.75,&quot;UTC +14&quot;,14,
					0)* 60 * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_WorkgroupId__c</fullName>
        <formula>CH_Workgroup_Schedule__r.CH_Workgroup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WorkgroupId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_WorkgroupMemberCount__c</fullName>
        <label>WorkgroupMemberCount</label>
        <summaryForeignKey>CH_Workgroup_Member_Timeslot_Association__c.CH_Workgroup_Schedule_Timeslot__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CH_Workgroup_Id__c</fullName>
        <description>Used by GridBuddy</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Workgroup Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Workgroup_Name__c</fullName>
        <description>Used by Gridbuddy</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Workgroup Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Workgroup_Schedule__c</fullName>
        <label>Workgroup Schedule</label>
        <referenceTo>CH_Workgroup_Schedule__c</referenceTo>
        <relationshipLabel>Workgroup Schedule Timeslots</relationshipLabel>
        <relationshipName>Workgroup_Schedule_Timeslots</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Workgroup Schedule Timeslot</label>
    <nameField>
        <displayFormat>WGSTS-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workgroup Schedule Timeslots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CH_EndDate_After_StartDate</fullName>
        <active>true</active>
        <errorConditionFormula>TIMEVALUE(CH_End_Time__c) &lt; TIMEVALUE(CH_Start_Time__c) &amp;&amp; TIMEVALUE(CH_End_Time__c) &lt;&gt; TIMEVALUE(&quot;0:00:00.000&quot;)</errorConditionFormula>
        <errorMessage>The end time needs to be later then the start time</errorMessage>
    </validationRules>
</CustomObject>