src/objects/CH_Workgroup_Schedule_Timeslot__c/validationRules/CH_EndDate_After_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_EndDate_After_StartDate</fullName>
    <active>true</active>
    <errorConditionFormula>TIMEVALUE(CH_End_Time__c) &lt; TIMEVALUE(CH_Start_Time__c) &amp;&amp; TIMEVALUE(CH_End_Time__c) &lt;&gt; TIMEVALUE(&quot;0:00:00.000&quot;)</errorConditionFormula>
    <errorMessage>The end time needs to be later then the start time</errorMessage>
</ValidationRule>